--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
 h1 {
     text-align: center;
 }
+.container {
+    height: 200px;
+    position: relative;
+  }
+  
+  .center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
